# browser-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  glama.json  justfile  llms-full.txt  llms.txt  pyproject.toml  start.ps1
src/browser_mcp/: __init__.py  __main__.py  app.py  browser.py  config.py  server.py
src/browser_mcp/bookmarks/: __init__.py  chromium_common.py  firefox_bookmarks.py  portmanteau.py  sync.py
src/browser_mcp/bookmarks/firefox/: __init__.py  age_analyzer.py  bookmark_manager.py  bulk_operations.py  core.py  db.py  exceptions.py  link_checker.py  links.py  search_tools.py  status.py  tag_manager.py  utils.py
src/browser_mcp/conf/: morning_pages.json
src/browser_mcp/workflows/: __init__.py  agentic.py  briefing.py  browser_use_agent.py  link_processor.py
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  index.css
webapp/src/components/layout/: HelpModal.tsx  LoggerModal.tsx  Sidebar.tsx  Topbar.tsx
webapp/src/hooks/: useZoom.ts
webapp/src/pages/: ApiDocs.tsx  Apps.tsx  Bookmarks.tsx  Chat.tsx  Dashboard.tsx  Skills.tsx  Tools.tsx
webapp/src/store/: connection.ts
