[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-mcp"
version = "0.1.0"
description = "FastMCP 3.2 server for Playwright browser automation — browse, click, screenshot, extract"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sandra Schipal" }]
dependencies = [
    "fastmcp>=3.4.2,<4",
    "httpx>=0.27",
    "uvicorn[standard]>=0.32",
    "fastapi>=0.115",
    "starlette>=0.46",
    "playwright>=1.40",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "browser-use>=0.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
browser-mcp = "browser_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "ruff>=0.15.12",
]
